# scrapy-chemical-parser

./: .dockerignore  .env_sample  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  scrapy.cfg
chemical_parser/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
chemical_scraper/: items.py  middlewares.py  pipelines.py  settings.py
chemical_scraper/services/: currency_converter.py
chemical_scraper/spiders/: accelpharmtech_spider.py
parsers/: models.py  serializers.py  tasks.py  urls.py  views.py
parsers/migrations/: 0001_initial.py  0002_alter_chemicalproduct_numcas.py
parsers/services/: get_average_price_service.py
